# nlcep

./: Cargo.toml  README.md  compile_wasm.sh  crates.js  help.html  index.html  nix.sh  patch_wasm.js  search-index.js  settings.html  src-files.js
.github/workflows/: docs.yml  test.yml
nlcep/: all.html  enum.EventParseError.html  fn.find_datetime.html  index.html  sidebar-items.js  struct.NewEvent.html
nlcep/temporal/: fn.find_datetime.html
nlcep/wasm/: fn.parse.html  fn.set_panic_hook.html  index.html  sidebar-items.js  struct.EventResult.html
search.desc/nlcep/: nlcep-desc-0-.js
src/: lib.rs  wasm.rs
src/nlcep/: lib.rs.html  wasm.rs.html
src/nlcep/temporal/: date.rs.html  mod.rs.html  time.rs.html
src/temporal/: date.rs  mod.rs  time.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/tsify/: trait.Tsify.js
trait.impl/wasm_bindgen/convert/traits/: trait.FromWasmAbi.js  trait.IntoWasmAbi.js  trait.OptionFromWasmAbi.js  trait.OptionIntoWasmAbi.js
trait.impl/wasm_bindgen/describe/: trait.WasmDescribe.js
